default/objects/Credit_Factory_Report__c/Credit_Factory_Report__c.object-meta.xml
<CustomObject>
    <label>Credit Factory Report</label>
    <nameField>
        <label>Credit Factory Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Factory Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>