default/objects/Credit_Factory_Report__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit Factory Reports</relationshipLabel>
    <relationshipName>Credit_Factory_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>