default/objects/Credit_Factory_Report__c/fields/Address_Change_Decision__c.field-meta.xml
<CustomField>
    <fullName>Address_Change_Decision__c</fullName>
    <label>Address Change Decision</label>
    <length>60</length>
    <type>Text</type>
</CustomField>