default/objects/Credit_Factory_Report__c/fields/Authorized_Share_Capital__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Share_Capital__c</fullName>
    <label>Authorized Share Capital</label>
    <length>50</length>
    <type>Text</type>
</CustomField>