default/objects/Credit_Factory_Report__c/fields/Authorized_Share_Capital_Currency__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Share_Capital_Currency__c</fullName>
    <label>Authorized Share Capital Currency</label>
    <length>20</length>
    <type>Text</type>
</CustomField>