default/objects/Credit_Factory_Report__c/fields/BIG_Requested__c.field-meta.xml
<CustomField>
    <fullName>BIG_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BIG Requested</label>
    <type>Checkbox</type>
</CustomField>