default/objects/Credit_Factory_Report__c/fields/Buffer__c.field-meta.xml
<CustomField>
    <fullName>Buffer__c</fullName>
    <label>Buffer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>