default/objects/Credit_Factory_Report__c/fields/Checked_Email__c.field-meta.xml
<CustomField>
    <fullName>Checked_Email__c</fullName>
    <label>Checked Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>