default/objects/Credit_Factory_Report__c/fields/Class_Rating__c.field-meta.xml
<CustomField>
    <fullName>Class_Rating__c</fullName>
    <label>Class Rating</label>
    <length>5</length>
    <type>Text</type>
</CustomField>