default/objects/Credit_Factory_Report__c/fields/Continuation_Date__c.field-meta.xml
<CustomField>
    <fullName>Continuation_Date__c</fullName>
    <label>Continuation Date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>