default/objects/Credit_Factory_Report__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <length>150</length>
    <type>Text</type>
</CustomField>