default/objects/Credit_Factory_Report__c/fields/Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit__c</fullName>
    <inlineHelpText>Maximum credit amount</inlineHelpText>
    <label>Credit Limit</label>
    <length>35</length>
    <type>Text</type>
</CustomField>