default/objects/Credit_Factory_Report__c/fields/Credit_Limit_Bi_Weekly_7__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Bi_Weekly_7__c</fullName>
    <label>Credit Limit Bi-Weekly + 7</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>