default/objects/Credit_Factory_Report__c/fields/Credit_Limit_Currency__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Currency__c</fullName>
    <label>Credit Limit Currency</label>
    <length>20</length>
    <type>Text</type>
</CustomField>