default/objects/Credit_Factory_Report__c/fields/Credit_Limit_Monthly_27__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Monthly_27__c</fullName>
    <label>Credit Limit Monthly + 27</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>