default/objects/Credit_Factory_Report__c/fields/Creditors_Count__c.field-meta.xml
<CustomField>
    <fullName>Creditors_Count__c</fullName>
    <label>Creditors Count</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>