default/objects/Credit_Factory_Report__c/fields/Date_Last_Register_Entry__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_Register_Entry__c</fullName>
    <label>Date Last Register Entry</label>
    <length>100</length>
    <type>Text</type>
</CustomField>