default/objects/Credit_Factory_Report__c/fields/Date_of_Foundation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Foundation__c</fullName>
    <label>Date of Foundation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>