default/objects/Credit_Factory_Report__c/fields/Date_Of_Last_Change_Of_Name__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Last_Change_Of_Name__c</fullName>
    <label>Date Of Last Change Of Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>