default/objects/Credit_Factory_Report__c/fields/Date_of_Last_Major_Update__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Major_Update__c</fullName>
    <label>Date of Last Major Update</label>
    <length>100</length>
    <type>Text</type>
</CustomField>