default/objects/Credit_Factory_Report__c/fields/Date_of_Last_Request__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Request__c</fullName>
    <label>Date of Last Request</label>
    <length>20</length>
    <type>Text</type>
</CustomField>