default/objects/Credit_Factory_Report__c/fields/Decision_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Decision_Status_Code__c</fullName>
    <label>Decision Status Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>