default/objects/Credit_Factory_Report__c/fields/Decision_Verdict__c.field-meta.xml
<CustomField>
    <fullName>Decision_Verdict__c</fullName>
    <label>Decision Verdict</label>
    <length>10</length>
    <type>Text</type>
</CustomField>