default/objects/Credit_Factory_Report__c/fields/Deposit_Bi_Weekly_14__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Bi_Weekly_14__c</fullName>
    <label>Deposit Bi-Weekly + 14</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>