default/objects/Credit_Factory_Report__c/fields/Deposit_Monthly_27__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Monthly_27__c</fullName>
    <label>Deposit Monthly + 27</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>