default/objects/Credit_Factory_Report__c/fields/Different_post_address__c.field-meta.xml
<CustomField>
    <fullName>Different_post_address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Post address is different from legal address</description>
    <inlineHelpText>Post address is different from legal address</inlineHelpText>
    <label>Different post address</label>
    <type>Checkbox</type>
</CustomField>