default/objects/Credit_Factory_Report__c/fields/Domain_Date__c.field-meta.xml
<CustomField>
    <fullName>Domain_Date__c</fullName>
    <label>Domain Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>