default/objects/Credit_Factory_Report__c/fields/Domain_Exists__c.field-meta.xml
<CustomField>
    <fullName>Domain_Exists__c</fullName>
    <label>Domain Exists</label>
    <length>255</length>
    <type>Text</type>
</CustomField>