default/objects/Credit_Factory_Report__c/fields/Economic_Informations_Count__c.field-meta.xml
<CustomField>
    <fullName>Economic_Informations_Count__c</fullName>
    <label>Economic Informations Count</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>