default/objects/Credit_Factory_Report__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email</label>
    <length>150</length>
    <type>Text</type>
</CustomField>