default/objects/Credit_Factory_Report__c/fields/Email_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Date__c</fullName>
    <label>Email Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>