default/objects/Credit_Factory_Report__c/fields/Email_Exists__c.field-meta.xml
<CustomField>
    <fullName>Email_Exists__c</fullName>
    <label>Email Exists</label>
    <length>255</length>
    <type>Text</type>
</CustomField>