default/objects/Credit_Factory_Report__c/fields/Email_Risk__c.field-meta.xml
<CustomField>
    <fullName>Email_Risk__c</fullName>
    <label>Email Risk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>