default/objects/Credit_Factory_Report__c/fields/Email_Status__c.field-meta.xml
<CustomField>
    <fullName>Email_Status__c</fullName>
    <label>Email Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>