default/objects/Credit_Factory_Report__c/fields/Emails_Mismatch__c.field-meta.xml
<CustomField>
    <fullName>Emails_Mismatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emails Mismatch</label>
    <type>Checkbox</type>
</CustomField>