default/objects/Credit_Factory_Report__c/fields/Establishment_Date__c.field-meta.xml
<CustomField>
    <fullName>Establishment_Date__c</fullName>
    <label>Establishment Date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>