default/objects/Credit_Factory_Report__c/fields/Exception_Code__c.field-meta.xml
<CustomField>
    <fullName>Exception_Code__c</fullName>
    <label>Exception Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>