default/objects/Credit_Factory_Report__c/fields/Financial_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Financial_Evaluation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financial Evaluation</label>
    <type>Checkbox</type>
</CustomField>