default/objects/Credit_Factory_Report__c/fields/Financial_Situation__c.field-meta.xml
<CustomField>
    <fullName>Financial_Situation__c</fullName>
    <label>Financial Situation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>