default/objects/Credit_Factory_Report__c/fields/First_bill__c.field-meta.xml
<CustomField>
    <fullName>First_bill__c</fullName>
    <defaultValue>false</defaultValue>
    <description>First bill more than 500 000</description>
    <inlineHelpText>First bill more than 500 000</inlineHelpText>
    <label>First bill</label>
    <type>Checkbox</type>
</CustomField>