default/objects/Credit_Factory_Report__c/fields/Fiscal_Number__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Number__c</fullName>
    <label>Fiscal Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>