default/objects/Credit_Factory_Report__c/fields/Fraud_Type__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Type__c</fullName>
    <label>Fraud Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>