default/objects/Credit_Factory_Report__c/fields/Fraud_Within_Industry__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Within_Industry__c</fullName>
    <label>Fraud Within Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>