default/objects/Credit_Factory_Report__c/fields/Housenumber__c.field-meta.xml
<CustomField>
    <fullName>Housenumber__c</fullName>
    <label>Housenumber</label>
    <length>50</length>
    <type>Text</type>
</CustomField>