default/objects/Credit_Factory_Report__c/fields/Indication_Bankruptcy__c.field-meta.xml
<CustomField>
    <fullName>Indication_Bankruptcy__c</fullName>
    <label>Indication Bankruptcy</label>
    <length>10</length>
    <type>Text</type>
</CustomField>