default/objects/Credit_Factory_Report__c/fields/Indication_Dip__c.field-meta.xml
<CustomField>
    <fullName>Indication_Dip__c</fullName>
    <label>Indication Dip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>