default/objects/Credit_Factory_Report__c/fields/Indication_Economically_Active__c.field-meta.xml
<CustomField>
    <fullName>Indication_Economically_Active__c</fullName>
    <label>Indication Economically Active</label>
    <length>10</length>
    <type>Text</type>
</CustomField>