default/objects/Credit_Factory_Report__c/fields/Indication_Main_Establishment__c.field-meta.xml
<CustomField>
    <fullName>Indication_Main_Establishment__c</fullName>
    <label>Indication Main Establishment</label>
    <length>10</length>
    <type>Text</type>
</CustomField>