default/objects/Credit_Factory_Report__c/fields/Indication_Non_Mailing__c.field-meta.xml
<CustomField>
    <fullName>Indication_Non_Mailing__c</fullName>
    <label>Indication Non Mailing</label>
    <length>10</length>
    <type>Text</type>
</CustomField>