default/objects/Credit_Factory_Report__c/fields/Indication_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Indication_Organisation__c</fullName>
    <label>Indication Organisation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>