default/objects/Credit_Factory_Report__c/fields/Issued_Share_Capital__c.field-meta.xml
<CustomField>
    <fullName>Issued_Share_Capital__c</fullName>
    <label>Issued Share Capital</label>
    <length>50</length>
    <type>Text</type>
</CustomField>