default/objects/Credit_Factory_Report__c/fields/Issued_Share_Capital_Currency__c.field-meta.xml
<CustomField>
    <fullName>Issued_Share_Capital_Currency__c</fullName>
    <label>Issued Share Capital Currency</label>
    <length>20</length>
    <type>Text</type>
</CustomField>