default/objects/Credit_Factory_Report__c/fields/Legal_Form__c.field-meta.xml
<CustomField>
    <fullName>Legal_Form__c</fullName>
    <label>Legal Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>