default/objects/Credit_Factory_Report__c/fields/Liabilities_Count__c.field-meta.xml
<CustomField>
    <fullName>Liabilities_Count__c</fullName>
    <label>Liabilities Count</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>