default/objects/Credit_Factory_Report__c/fields/Max_Credit_Limit_Monthly_27__c.field-meta.xml
<CustomField>
    <fullName>Max_Credit_Limit_Monthly_27__c</fullName>
    <label>Max Credit Limit Monthly + 27</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>