default/objects/Credit_Factory_Report__c/fields/Max_Value_Bi_Weekly_7__c.field-meta.xml
<CustomField>
    <fullName>Max_Value_Bi_Weekly_7__c</fullName>
    <label>Max Value Bi-Weekly + 7</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>