default/objects/Credit_Factory_Report__c/fields/Name_Change_Decision__c.field-meta.xml
<CustomField>
    <fullName>Name_Change_Decision__c</fullName>
    <label>Name Change Decision</label>
    <length>10</length>
    <type>Text</type>
</CustomField>