default/objects/Credit_Factory_Report__c/fields/Name_Match__c.field-meta.xml
<CustomField>
    <fullName>Name_Match__c</fullName>
    <label>Name Match</label>
    <length>255</length>
    <type>Text</type>
</CustomField>