default/objects/Credit_Factory_Report__c/fields/Negative_information__c.field-meta.xml
<CustomField>
    <fullName>Negative_information__c</fullName>
    <label>Negative Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>