default/objects/Credit_Factory_Report__c/fields/New_legal__c.field-meta.xml
<CustomField>
    <fullName>New_legal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>New legal entity (no more than 12 month old)</description>
    <inlineHelpText>New legal entity (no more than 12 month old)</inlineHelpText>
    <label>New legal</label>
    <type>Checkbox</type>
</CustomField>