default/objects/Credit_Factory_Report__c/fields/Number_of_executions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_executions__c</fullName>
    <label>Number of executions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>