default/objects/Credit_Factory_Report__c/fields/Number_Of_Hits__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Hits__c</fullName>
    <label>Number Of Hits</label>
    <length>2</length>
    <type>Text</type>
</CustomField>