default/objects/Credit_Factory_Report__c/fields/Obligation_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Obligation_Overdue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Obligation Overdue</label>
    <type>Checkbox</type>
</CustomField>