default/objects/Credit_Factory_Report__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Credit Factory Reports</relationshipLabel>
    <relationshipName>Credit_Factory_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>