default/objects/Credit_Factory_Report__c/fields/Paid_Up_Share_Capital__c.field-meta.xml
<CustomField>
    <fullName>Paid_Up_Share_Capital__c</fullName>
    <label>Paid Up Share Capital</label>
    <length>50</length>
    <type>Text</type>
</CustomField>