default/objects/Credit_Factory_Report__c/fields/Paid_Up_Share_Capital_Currency__c.field-meta.xml
<CustomField>
    <fullName>Paid_Up_Share_Capital_Currency__c</fullName>
    <label>Paid Up Share Capital Currency</label>
    <length>20</length>
    <type>Text</type>
</CustomField>