default/objects/Credit_Factory_Report__c/fields/Parent_Company_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Company_Id__c</fullName>
    <label>Parent Company Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>