default/objects/Credit_Factory_Report__c/fields/Payment_History_Requested__c.field-meta.xml
<CustomField>
    <fullName>Payment_History_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check for KRD request</description>
    <label>Payment History Requested</label>
    <type>Checkbox</type>
</CustomField>