default/objects/Credit_Factory_Report__c/fields/PIT_Currency__c.field-meta.xml
<CustomField>
    <fullName>PIT_Currency__c</fullName>
    <label>PIT Currency</label>
    <length>20</length>
    <type>Text</type>
</CustomField>