default/objects/Credit_Factory_Report__c/fields/Policy_Rules_Hits__c.field-meta.xml
<CustomField>
    <fullName>Policy_Rules_Hits__c</fullName>
    <label>Policy Rules Hits</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>