default/objects/Credit_Factory_Report__c/fields/Postal_City__c.field-meta.xml
<CustomField>
    <fullName>Postal_City__c</fullName>
    <label>Postal City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>