default/objects/Credit_Factory_Report__c/fields/Postal_Housenumber__c.field-meta.xml
<CustomField>
    <fullName>Postal_Housenumber__c</fullName>
    <label>Postal Housenumber</label>
    <length>20</length>
    <type>Text</type>
</CustomField>