default/objects/Credit_Factory_Report__c/fields/Postal_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Postal_Postcode__c</fullName>
    <label>Postal Postcode</label>
    <length>15</length>
    <type>Text</type>
</CustomField>