default/objects/Credit_Factory_Report__c/fields/Postal_Street__c.field-meta.xml
<CustomField>
    <fullName>Postal_Street__c</fullName>
    <label>Postal Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>