default/objects/Credit_Factory_Report__c/fields/Postcode__c.field-meta.xml
<CustomField>
    <fullName>Postcode__c</fullName>
    <label>Postcode</label>
    <length>15</length>
    <type>Text</type>
</CustomField>