default/objects/Credit_Factory_Report__c/fields/Primary_Sbi_Code__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sbi_Code__c</fullName>
    <label>Primary Sbi Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>