default/objects/Credit_Factory_Report__c/fields/Primary_Sbi_Code_Text__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sbi_Code_Text__c</fullName>
    <label>Primary Sbi Code Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>