default/objects/Credit_Factory_Report__c/fields/Principal_Activity_Code__c.field-meta.xml
<CustomField>
    <fullName>Principal_Activity_Code__c</fullName>
    <label>Principal Activity Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>