default/objects/Credit_Factory_Report__c/fields/Principal_Activity_Description__c.field-meta.xml
<CustomField>
    <fullName>Principal_Activity_Description__c</fullName>
    <label>Principal Activity Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>