default/objects/Credit_Factory_Report__c/fields/Profit_Loss_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Profit_Loss_Last_Year__c</fullName>
    <label>Profit Loss Last Year</label>
    <length>30</length>
    <type>Text</type>
</CustomField>