default/objects/Credit_Factory_Report__c/fields/Profit_Loss_Year_Before_Last__c.field-meta.xml
<CustomField>
    <fullName>Profit_Loss_Year_Before_Last__c</fullName>
    <label>Profit Loss Year Before Last</label>
    <length>30</length>
    <type>Text</type>
</CustomField>