default/objects/Credit_Factory_Report__c/fields/Provider_Description__c.field-meta.xml
<CustomField>
    <fullName>Provider_Description__c</fullName>
    <label>Provider Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>