default/objects/Credit_Factory_Report__c/fields/Registered_Housenumber__c.field-meta.xml
<CustomField>
    <fullName>Registered_Housenumber__c</fullName>
    <label>Registered Housenumber</label>
    <length>20</length>
    <type>Text</type>
</CustomField>