default/objects/Credit_Factory_Report__c/fields/Registered_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Registered_Postcode__c</fullName>
    <label>Registered Postcode</label>
    <length>15</length>
    <type>Text</type>
</CustomField>