default/objects/Credit_Factory_Report__c/fields/Registered_Street__c.field-meta.xml
<CustomField>
    <fullName>Registered_Street__c</fullName>
    <label>Registered Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>