default/objects/Credit_Factory_Report__c/fields/Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Request_Status__c</fullName>
    <label>Request Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>