default/objects/Credit_Factory_Report__c/fields/Risk_Advice__c.field-meta.xml
<CustomField>
    <fullName>Risk_Advice__c</fullName>
    <label>Risk Advice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>