default/objects/Credit_Factory_Report__c/fields/Risk_Category__c.field-meta.xml
<CustomField>
    <fullName>Risk_Category__c</fullName>
    <label>Risk Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>