default/objects/Credit_Factory_Report__c/fields/Risk_Description__c.field-meta.xml
<CustomField>
    <fullName>Risk_Description__c</fullName>
    <label>Risk Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>