default/objects/Credit_Factory_Report__c/fields/Rsin_Number__c.field-meta.xml
<CustomField>
    <fullName>Rsin_Number__c</fullName>
    <label>Rsin Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>