default/objects/Credit_Factory_Report__c/fields/RU_Application_Blocked__c.field-meta.xml
<CustomField>
    <fullName>RU_Application_Blocked__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Application to Scoring is Blocked</inlineHelpText>
    <label>Application Blocked</label>
    <type>Checkbox</type>
</CustomField>