default/objects/Credit_Factory_Report__c/fields/RU_black_list_code__c.field-meta.xml
<CustomField>
    <fullName>RU_black_list_code__c</fullName>
    <formula>Account__r.Black_list_check_code__c</formula>
    <label>Black list code</label>
    <type>Text</type>
</CustomField>