default/objects/Credit_Factory_Report__c/fields/RU_black_list_decision__c.field-meta.xml
<CustomField>
    <fullName>RU_black_list_decision__c</fullName>
    <formula>TEXT(Account__r.Black_list_check_decision__c)</formula>
    <label>Black list decision</label>
    <type>Text</type>
</CustomField>