default/objects/Credit_Factory_Report__c/fields/RU_Client_choice__c.field-meta.xml
<CustomField>
    <fullName>RU_Client_choice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Показывает что данный кредит был выбран клиентом</description>
    <inlineHelpText>Показывает что данный кредит был выбран клиентом</inlineHelpText>
    <label>Client choice</label>
    <type>Checkbox</type>
</CustomField>